# nui

./: CMakeLists.txt  EditLineHist.h  NexusMenuData.cpp  NexusMenuData.h  NexusParse.cpp  NexusParse.h  NexusReader.cpp  NexusReader.h  NexusUserInterface.cpp  NexusUserInterface.h  myostream.h
MorphyNUI/MorphyNUI.xcodeproj/: project.pbxproj
MorphyNUI/MorphyNUI.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
MorphyNUI/MorphyNUI.xcodeproj/project.xcworkspace/xcuserdata/mbrazeau.xcuserdatad/: UserInterfaceState.xcuserstate
MorphyNUI/MorphyNUI.xcodeproj/xcuserdata/mbrazeau.xcuserdatad/xcschemes/: xcschememanagement.plist
tests/: Ptomacanth_Edit.txt
tests/test17/: stacking_commands_output.txt
